# deep-learning-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: pre-commit.yml
conf/: config.yaml
conf/datamodule/: mnist.yaml
conf/loggers/: comet.yaml  local.yaml
conf/model/: fc_ae.yaml
conf/optimizers/: adam.yaml
conf/task/: pixel_wise_autoencoding.yaml
conf/trainer/: debug.yaml  test.yaml  train+test.yaml  train.yaml
deep_learning_template/: __init__.py
deep_learning_template/core/: base_data_module.py  base_model.py  base_task.py  initialization.py
deep_learning_template/datamodules/: mnist.py
deep_learning_template/models/: autoencoder.py  layers.py  mlp.py
deep_learning_template/tasks/: generic.py  representation_learning.py
deep_learning_template/utils/: config.py  serialization.py
deep_learning_template/utils/format/: native.py
deep_learning_tutorials/: __init__.py
deep_learning_tutorials/core/: __init__.py  base_task.py  initialization.py
deep_learning_tutorials/datamodules/: mnist.py
deep_learning_tutorials/models/: autoencoder.py  mlp.py
deep_learning_tutorials/tasks/: generic.py  representation_learning.py
deep_learning_tutorials/utils/: serialization.py
tests/: test_deep_learning_tutorials.py
