[tool.poetry]
name = "deep-learning-template"
version = "0.1.0"
description = "Deep Learning Project Template for Lightning and Hydra"
authors = ["Nathan Painchaud <nathan.painchaud@gmail.com>"]
license = "MIT"

readme = 'README.md'

repository = "https://github.com/nathanpainchaud/deep-learning-template"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"
pytorch-lightning = "^1.2.6"
pytorch-lightning-bolts = "^0.3.0"
hydra-core = "^1.0.6"
comet-ml = {version = "^3.7.0", extras = ["comet-ml"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pre-commit = "^2.11.1"
isort = "^5.8.0"
black = "^20.8b1"
flake8 = "^3.9.0"
flake8-docstrings = "^1.6.0"

[tool.poetry.extras]
comet = ["comet-ml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["deep_learning_template"]
